Using angular matrial components

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,31 @@
 <div class="container mt-5">
     <div class="card" style="padding: 20px;">
         <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+
+
+            <mat-form-field appearance="outline">
+                <mat-label>UserName</mat-label>
+                <input matInput 
+                ngModel
+                name="userName"
+                id="userName"
+                placeholder="Enter your username">
+                <mat-hint>UserName</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+                <mat-label>Outline form field</mat-label>
+                <input matInput 
+                ngModel
+            name="userPassword"
+            id="userPassword"
+            placeholder="Enter your password">
+                <mat-hint>Password</mat-hint>
+            </mat-form-field>
+
+            <button mat-raised-button color="primary">Primary</button>
+
+
             <input type="text"
             ngModel
             name="userName"
