--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
 
 
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" class="w-100">
                 <mat-label>UserName</mat-label>
                 <input matInput 
                 ngModel
@@ -13,20 +13,19 @@
                 <mat-hint>UserName</mat-hint>
             </mat-form-field>
 
-            <mat-form-field appearance="outline">
-                <mat-label>Outline form field</mat-label>
-                <input matInput 
-                ngModel
-            name="userPassword"
-            id="userPassword"
-            placeholder="Enter your password">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Password</mat-label>
+                <input matInput type="password"
+                ngModel 
+                name="userPassword" 
+                id="userPassword" 
+                placeholder="Enter your password">
                 <mat-hint>Password</mat-hint>
             </mat-form-field>
 
-            <button mat-raised-button color="primary">Primary</button>
+            <button type="submit" mat-raised-button color="primary" class="w-100">Login</button>
 
-
-            <input type="text"
+            <!-- <input type="text"
             ngModel
             name="userName"
             id="userName"
@@ -44,7 +43,8 @@
 
             <input type="submit"
             value="Login"
-            class="btn btn-outline-primary form-control rounded-0">
+            class="btn btn-outline-primary form-control rounded-0"> -->
+        
         </form>
     </div>
 </div>
